[package]
name = "lua-pm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"
mlua = { version = "0.9", features = ["lua54", "vendored"] }

[[bin]]
name = "lua-pm"
path = "src/main.rs"